--- a/pg4.html
+++ b/pg4.html
@@ -28,8 +28,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
                     </div>
                 </div>
-            <div class="item">
-                <div id="img"></div>
+            </div>
+            <div class="item2">
+                <div id="img" style="background-image: url(images/pg4/ph1.png);"></div>
             </div>
         </section>
     </main>
