pg7 terminada y otros cambios

--- a/pg7.html
+++ b/pg7.html
@@ -15,24 +15,24 @@
             </div>
             <div class="section">
                 <div class="item">
-                    <h1></h1>
-                    <p></p>
-                    <div class="img_cont"></div>
+                    <h1>01</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="img_cont" style="background-image: url(images/pg7/ph1.png);"></div>
                 </div>
                 <div class="item">
-                    <h1></h1>
-                    <p></p>
-                    <div class="img_cont"></div>
+                    <h1>02</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="img_cont" style="background-image: url(images/pg7/ph2.png);"></div>
                 </div>
                 <div class="item">
-                    <h1></h1>
-                    <p></p>
-                    <div class="img_cont"></div>
+                    <h1>03</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="img_cont" style="background-image: url(images/pg7/ph3.png);"></div>
                 </div>
                 <div class="item">
-                    <h1></h1>
-                    <p></p>
-                    <div class="img_cont"></div>
+                    <h1>04</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="img_cont" style="background-image: url(images/pg7/ph4.png);"></div>
                 </div>
             </div>
         </div>
