--- a/pg31.html
+++ b/pg31.html
@@ -3,19 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/pg31.css">
     <title>pg31</title>
 </head>
-<body style="background-image: url(images/pg31/bg.jpg)">
-    
-    <div>
-        <div class="woman"><img src="images/pg31/hero image.png"></div>
+<body style="background-image: url(images/pg31/bg.jpg);">
+    <div class="container">
+        <div class="info">
+            <h1>We collaborate<br> to build digital <br> experience</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit. Cursus imperdiet sed id <br>elementum. Quam vel aliquam sit vulputate. <br>Faucibus nec gravida ipsum pulvinar vel non.</p>
+            <button>Get started</button>
+        </div>
+        <div class="cards">
+            <div class="card1">
+                <img src="images/pg31/Frame 14384.jpg">
+                <p>Lorem ipsum dolor sit amet, <br> consectetu adipiscing elit. <br> Cursus imperdiet sed id.</p>
+            </div>
+            <div class="card2">
+                <img src="images/pg31/Frame 14385.jpg">
+                <p>Lorem ipsum dolor sit amet,<br>  consectetu adipiscing elit.<br>  Cursus imperdiet sed id.</p>
+            </div>
+            <div class="card3">
+                <img src="images/pg31/Frame 14386.jpg">
+                <p>Lorem ipsum dolor sit amet,<br>  consectetu adipiscing elit.<br>  Cursus imperdiet sed id.</p>
+            </div>
+        </div>
     </div>
-    <div text>
-        <h1>We collaborate <br> to build digital <br> experience</h1>
-        <p>Lorem impsum dolor sit amet, consectetur <br> adipiscing elit. Cursus imperdiet sed id <br> elementum. Quam vel aliquam sit vulputate. <br> Faucibus nec gravida ipsum pulvinar vel non.
-        </p>
+    <div class="img">
+        <img src="images/pg31/hero image.png">
     </div>
 </body>
 </html>
