--- a/index.html
+++ b/index.html
@@ -4,13 +4,169 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Proyecto</title>
+    <link rel="stylesheet" href="css/idx.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Proyecto 30 pg</title>
 </head>
 <body>
-    <header>
-        <h1>
-            PROTECTO 55 PAGINAS
-        </h1>
-    </header>
+    <main class="content">
+        <header>
+            <h1>
+                PROYECTO 30 LANDING PAGES
+            </h1>
+        </header>
+        <section class="links">
+            <div class="item">
+                <a href="pg1.html">
+                    <p>pagina 1</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg2.html">
+                    <p>pagina 2</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg3.html">
+                    <p>pagina 3</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg4.html">
+                    <p>pagina 4</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg5.html">
+                    <p>pagina 5</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg6.html">
+                    <p>pagina 6</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg7.html">
+                    <p>pagina 7</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg8.html">
+                    <p>pagina 8</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg9.html">
+                    <p>pagina 9</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg10.html">
+                    <p>pagina 10</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg11.html">
+                    <p>pagina 11</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg12.html">
+                    <p>pagina 12</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg13.html">
+                    <p>pagina 13</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg14.html">
+                    <p>pagina 14</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg15.html">
+                    <p>pagina 15</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg16.html">
+                    <p>pagina 16</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg17.html">
+                    <p>pagina 17</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg18.html">
+                    <p>pagina 18</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg19.html">
+                    <p>pagina 19</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg31.html">
+                    <p>pagina 20</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg32.html">
+                    <p>pagina 21</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg33.html">
+                    <p>pagina 22</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg34.html">
+                    <p>pagina 23</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="pg35.html">
+                    <p>pagina 24</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="">
+                    <p>pagina 25</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="">
+                    <p>pagina 26</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="">
+                    <p>pagina 27</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="">
+                    <p>pagina 28</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="">
+                    <p>pagina 29</p>
+                </a>
+            </div>
+            <div class="item">
+                <a href="">
+                    <p>pagina 30</p>
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
