--- a/lp35/pg35.html
+++ b/lp35/pg35.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/pg35.css">
+    <link rel="stylesheet" href="pg35.css">
     <title>pg35</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
         </div>
         <div class="images">
            <div class="img1"><div class="img"><img src="images/pg35/circulo.png"></div></div>
-           <div class="img2"><button id="b1">Inclusive</button></div>
+           <div class="img2"><button id="b1">Inclusive</button></div> 
            <div class="img3"><div class="img"><img src="images/pg35/Flor.png"></div></div>
            <div class="img4"><button id="b1">creative</button></div>
            <div class="img5"></div>
