--- a/index.html
+++ b/index.html
@@ -127,42 +127,42 @@
                 </a>
             </div>
             <div class="item">
-                <a href="pg34.html">
+                <a href="lp50/pg50.html">
                     <p>pagina 23</p>
                 </a>
             </div>
             <div class="item">
-                <a href="pg35.html">
+                <a href="pg37.html">
                     <p>pagina 24</p>
                 </a>
             </div>
             <div class="item">
-                <a href="">
+                <a href="pg38.html">
                     <p>pagina 25</p>
                 </a>
             </div>
             <div class="item">
-                <a href="">
+                <a href="pg39.html">
                     <p>pagina 26</p>
                 </a>
             </div>
             <div class="item">
-                <a href="">
+                <a href="pg40.html">
                     <p>pagina 27</p>
                 </a>
             </div>
             <div class="item">
-                <a href="">
+                <a href="pg46.html">
                     <p>pagina 28</p>
                 </a>
             </div>
             <div class="item">
-                <a href="">
+                <a href="pg47.html">
                     <p>pagina 29</p>
                 </a>
             </div>
             <div class="item">
-                <a href="">
+                <a href="lp35/pg35.html">
                     <p>pagina 30</p>
                 </a>
             </div>
