--- a/lp35/pg35.html
+++ b/lp35/pg35.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="text">
-            <img src="images/pg35/Rainbow.png">
+            <img src="pg35/Rainbow.png">
             <div class="info">
                 <h1>Bringing your<br> community together</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Faucibus in libero risus semper <br> habitant arcu eget. Et integer facilisi eget.</p>
@@ -21,22 +21,22 @@
                 </div>
             </div>
             <div class="redes">
-                <img src="images/pg35/red1.png">
-                <img src="images/pg35/red2.png">
-                <img src="images/pg35/red3.png">
-                <img src="images/pg35/red4.png">
+                <img src="pg35/red1.png">
+                <img src="pg35/red2.png">
+                <img src="pg35/red3.png">
+                <img src="pg35/red4.png">
             </div>
         </div>
         <div class="images">
-           <div class="img1"><div class="img"><img src="images/pg35/circulo.png"></div></div>
+           <div class="img1"><div class="img"><img src="pg35/circulo.png"></div></div>
            <div class="img2"><button id="b1">Inclusive</button></div> 
-           <div class="img3"><div class="img"><img src="images/pg35/Flor.png"></div></div>
+           <div class="img3"><div class="img"><img src="pg35/Flor.png"></div></div>
            <div class="img4"><button id="b1">creative</button></div>
            <div class="img5"></div>
            <div class="img6"><button id="b2">Diverse</button></div>
            <div class="img7"></div>
-           <div class="img8"><div class="imga"><img src="images/pg35/Asterisk.png"></div><button id="b3">Caring</button></div>
-           <div class="img9"><div class="img"><img src="images/pg35/Butterfly.png"></div></div>
+           <div class="img8"><div class="imga"><img src="pg35/Asterisk.png"></div><button id="b3">Caring</button></div>
+           <div class="img9"><div class="img"><img src="pg35/Butterfly.png"></div></div>
         </div>
     </div>
 </body>
